<resources>
    <string name="app_name">Pristine_Approval_Portal</string>

    <string name="login_password_hint">Enter Password</string>
    <string name="login_mail_hint">Enter Mail</string>
    <string name="login_forget_hint">Forget Password ?</string>
    <string name="login_singUp_hint">Do you have any account ? Sing Up</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_indentheader">Indent Header</string>
    <string name="menu_purchase_receipt">Purchase Receipt</string>
    <string name="menu_purchaseOrderHeader_dashboard">Purchase Order Header</string>
    <string name="menu_approval">Approval</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>